deploy: af7a18938e78365dc66db5ae1e70aaad07abf868

--- a/ar/guide-immigrant-californians/index.html
+++ b/ar/guide-immigrant-californians/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>مساعدة المهاجرين</h1>
           
-            <p class="small-text">Last updated&nbsp;8:39 ص الساعة 30 أكتوبر 2020</p>
+            <p class="small-text">Last updated&nbsp;1:43 م الساعة 19 نوفمبر 2020</p>
           
         </div>
       </div>
@@ -182,7 +182,7 @@
 
 
 
-<p>إذا كنت غير موثق أو ليس لديك تأمين، فما يزال بإمكانك الخضوع للفحوصات اللازمة لكوفيد-19 وعلاجه مجانًا. ولا تُحتسب رعاية Medi-Cal المتعلقة بفحوصات فيروس كوفيد-19 وعلاجه ضمن قانون الرسوم العامة.</p>
+<p>إذا لم يكن لديك وثائق أو تأمين، فلا يزال بإمكانك الخضوع للفحوصات اللازمة لكوفيد-19 وعلاجه مجانًا. رعاية Medi-Cal فيما يتعلق بأي فحوصات تخص كوفيد-19 أو العلاج وحده <strong>لا ينطبق</strong> عليها قانون العبء العام.</p>
 
 
 
