--- a/ar/healthcare/index.html
+++ b/ar/healthcare/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>الرعاية الصحية وتغطيتها</h1>
           
-            <p class="small-text">Last updated&nbsp;6:32 ص الساعة 14 نوفمبر 2020</p>
+            <p class="small-text">Last updated&nbsp;11:59 ص الساعة 19 نوفمبر 2020</p>
           
         </div>
       </div>
@@ -446,8 +446,9 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>تتم تغطية الخدمات التالية:</p>
-<ul><li>جمع العينات والتشخيص وفحص الأجسام المضادة</li><li>الزيارات المتعلقة بالفحوصات، بما في ذلك الأماكن التالية: <ul><li>المكتب </li><li>الرعاية العاجلة </li><li>غرفة الطوارئ، أو </li><li>الرعاية الصحة عن بُعد</li></ul></li><li>العلاج ويشمل ما يلي:<ul><li>الزيارات المكتبية للعيادات</li><li><a href="/ar/telehealth/#top">الرعاية الصحة عن بُعد</a></li><li>غرفة الطوارئ </li><li>المرضى الداخليين </li><li>المرضى الخارجيين/الملاحظة </li><li>مرافق ودور المسنين المتخصصة </li><li>وحدة الرعاية المديدة للأمراض الحادة (LTAC) </li><li>إعادة تأهيل مرضى الأمراض الحادة الداخليين </li><li>الرعاية الصحية المنزلية </li><li>المعدات الطبية المعمرة (DME)، مثل أنابيب الأكسجين وأجهزة التنفس الصناعي</li><li>نقل المرضى بسيارات الإسعاف في حالات الطوارئ </li><li>نقل الحالات غير الطارئة بسيارة الإسعاف</li><li>الأدوية المعتمدة من إدارة الغذاء والدواء (FDA) وتُدار كجزء من إقامة المرضى الداخليين بالمستشفيات</li><li>الرسوم الإدارية للقاح المعتمد من إدارة الغذاء والدواء، عند توفره </li></ul></li></ul>
-<p>لن تتم تغطية الخدمات التي لا يغطيها برنامج Medicare التقليدي. وبالإضافة إلى ذلك، تُستبعد الخدمات التالية:</p>
+<ul><li>جمع العينات والتشخيص وفحص الأجسام المضادة</li><li>الزيارات المتعلقة بالفحوصات، بما في ذلك الأماكن التالية: <ul><li>المكتب </li><li>الرعاية العاجلة </li><li>غرفة الطوارئ، أو </li><li>الرعاية الصحة عن بُعد</li></ul></li><li>العلاج ويشمل ما يلي:<ul><li>الزيارات المكتبية للعيادات</li><li><a href="/ar/telehealth/#top">الرعاية الصحة عن بُعد</a></li><li>غرفة الطوارئ </li><li>المرضى الداخليين </li><li>المرضى الخارجيين/الملاحظة </li><li>مرافق ودور المسنين المتخصصة </li><li>وحدة الرعاية المديدة للأمراض الحادة (LTAC) </li><li>إعادة تأهيل مرضى الأمراض الحادة الداخليين </li><li>الرعاية الصحية المنزلية </li><li>المعدات الطبية المعمرة (DME)، مثل أنابيب الأكسجين وأجهزة التنفس الصناعي</li><li>نقل المرضى بسيارات الإسعاف في حالات الطوارئ </li><li>نقل الحالات غير الطارئة بسيارة الإسعاف</li><li>العلاجات المسموح بها أو المعتمدة أو المرخصة من إدارة الغذاء والدواء</li><li>اللقاحات المعتمدة أو المرخصة من إدارة الغذاء والدواء، بما في ذلك الرسوم الإدارية</li></ul></li></ul>
+<p>الخدمات التي لا يغطيها برنامج Medicare التقليدي، لن تغطيها تعويضات مطالبات كوفيد-19 إلى مزودي خدمات الرعاية الصحية ومرافق الفحص والعلاج وتقديم اللقاح لغير المؤمن عليهم.</p>
+<p>وبالإضافة إلى ذلك، تُستبعد الخدمات التالية:</p>
 <ul><li>أي علاج دون تشخيص أولي لكوفيد-19، باستثناء الحمل</li><li>خدمات رعاية المحتضرين</li><li>الأدوية الموصوفة طبيًّا لمرضى العيادات الخارجية</li></ul>
 <p>لمزيد من التفاصيل، راجع <a href="https://www.hrsa.gov/CovidUninsuredClaim">وقع الموارد والخدمات الصحية (HRSA)</a> و<a href="https://www.hrsa.gov/coviduninsuredclaim/frequently-asked-questions">الأسئلة المتكررة لديهم</a>.</p>
 
@@ -455,6 +456,10 @@
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
@@ -792,15 +797,11 @@
 
 
 
-<p><a href="http://www.insurance.ca.gov/01-consumers/140-catastrophes/Coronavirus.cfm">معلومات إدارة التأمين في ولاية كاليفورنيا الخاصة بمرض COVID-19</a></p>
+<ul><li><a href="http://www.insurance.ca.gov/01-consumers/140-catastrophes/Coronavirus.cfm">معلومات إدارة التأمين في ولاية كاليفورنيا الخاصة بمرض COVID-19</a></li><li><a href="https://twitter.com/CHHSAgency">صفحة الخدمات الإنسانية والصحية في ولاية كاليفورنيا على تويتر</a></li></ul>
 
 
 
-<p><a href="https://twitter.com/CHHSAgency">صفحة الخدمات الإنسانية والصحية في ولاية كاليفورنيا على تويتر</a></p>
-
-
-
-<p><a href="https://www.facebook.com/CAgovernor/">صفحة مكتب حاكم ولاية كاليفورنيا على فيسبوك</a><br></p>
+<p><br></p>
 </div>
     </div>
   </div>
