--- a/es/guide-immigrant-californians/index.html
+++ b/es/guide-immigrant-californians/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Ayuda para inmigrantes</h1>
           
-            <p class="small-text">Last updated&nbsp;30 de octubre de 2020 a las 8:39 a. m.</p>
+            <p class="small-text">Last updated&nbsp;19 de noviembre de 2020 a las 1:43 p. m.</p>
           
         </div>
       </div>
@@ -182,7 +182,7 @@
 
 
 
-<p>Si es indocumentado o no tiene seguro, de todos modos puede obtener la prueba de detección y el tratamiento necesarios para la COVID-19 sin costo. La atención de Medi-Cal para pruebas o tratamientos relacionados con la COVID-19 no se considera por sí sola para la regla de carga pública.</p>
+<p>Si es indocumentado o no tiene seguro, de todos modos puede obtener la prueba de detección y el tratamiento necesarios para la COVID-19 sin costo. La atención de Medi-Cal para pruebas o tratamientos relacionados con la COVID-19 <strong>no</strong> se considera por sí sola para la regla de carga pública.</p>
 
 
 
