--- a/ko/healthcare/index.html
+++ b/ko/healthcare/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>의료 서비스 및 보장 혜택</h1>
           
-            <p class="small-text">Last updated&nbsp;2020년 11월 14일 오전 6:32</p>
+            <p class="small-text">Last updated&nbsp;2020년 11월 19일 오전 11:59</p>
           
         </div>
       </div>
@@ -446,8 +446,9 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>다음 서비스가 보장됩니다:</p>
-<ul><li>검체 채취, 진단 및 항체 검사</li><li>다음 장소를 포함하는 검사 관련 검진 방문: <ul><li>진료실 </li><li>긴급 치료 시설 </li><li>응급실 또는 </li><li>원격 진료</li></ul></li><li>다음과 같은 치료:<ul><li>진료실 검진 방문</li><li><a href="/ko/telehealth/#top">원격 진료</a></li><li>응급실 </li><li>입원 </li><li>외래/관찰 </li><li>전문 요양 시설 </li><li>장기 급성환자 치료(Long-term acute care, LTAC)</li><li>급성 입원환자 재활</li><li>재택 건강 관리 </li><li>산소 호흡기 등의 내구성 의료 장비(Durable Medical Equipment, DME)</li><li>긴급 구급차 수송 </li><li>구급차를 통한 비응급 환자 이송</li><li>입원 환자 치료의 일환으로 기간 중 식품의약청(Food and Drug Administration, FDA) 승인 약물 투여</li><li>FDA 승인 백신 제공이 가능한 경우 이에 대한 행정 비용 </li></ul></li></ul>
-<p>일반 Medicare에서 보장하지 않는 서비스는 보장되지 않습니다. 이외에 다음 서비스가 제외됩니다:</p>
+<ul><li>검체 채취, 진단 및 항체 검사</li><li>다음 장소를 포함하는 검사 관련 검진 방문: <ul><li>진료실 </li><li>긴급 치료 시설 </li><li>응급실 또는 </li><li>원격 진료</li></ul></li><li>다음과 같은 치료:<ul><li>진료실 검진 방문</li><li><a href="/ko/telehealth/#top">원격 진료</a></li><li>응급실 </li><li>입원 </li><li>외래/관찰 </li><li>전문 요양 시설 </li><li>장기 급성환자 치료(Long-term acute care, LTAC)</li><li>급성 입원환자 재활</li><li>재택 건강 관리 </li><li>산소 호흡기 등의 내구성 의료 장비(Durable Medical Equipment, DME)</li><li>긴급 구급차 수송 </li><li>구급차를 통한 비응급 환자 이송</li><li>FDA의 허가, 인가 또는 승인을 받은 치료</li><li>투약비를 포함하여 FDA의 허가 또는 인가를 받은 백신</li></ul></li></ul>
+<p>일반 Medicare가 보장하지 않는 의료 서비스는 보험 미가입자에 대한 검사와 치료, 백신 투여 등으로 의료 제공자 및 시설에게 변상하는 COVID-19 관련 청구에서 그 혜택을 보장하지 않습니다.</p>
+<p>이외에 다음 서비스가 제외됩니다:</p>
 <ul><li>임신을 제외하고 COVID-19 일차 진단을 받지 않은 치료</li><li>호스피스 서비스</li><li>외래 환자의 처방전 약품</li></ul>
 <p>더 자세한 사항은 <a href="https://www.hrsa.gov/CovidUninsuredClaim">건강 자원 및 서비스 관리청(Health Resources and Services Administration, HRSA) 웹사이트</a> 및 해당 <a href="https://www.hrsa.gov/coviduninsuredclaim/frequently-asked-questions">자주 묻는 질문</a>을 참조하십시오.</p>
 
@@ -455,6 +456,10 @@
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
@@ -792,15 +797,11 @@
 
 
 
-<p><a href="http://www.insurance.ca.gov/01-consumers/140-catastrophes/Coronavirus.cfm">캘리포니아 보험 사무국 코로나바이러스 감염증(COVID-19) 정보</a></p>
+<ul><li><a href="http://www.insurance.ca.gov/01-consumers/140-catastrophes/Coronavirus.cfm">캘리포니아 보험 사무국 코로나바이러스 감염증(COVID-19) 정보</a></li><li><a href="https://twitter.com/CHHSAgency">캘리포니아 보건 사회 복지부 Twitter</a></li></ul>
 
 
 
-<p><a href="https://twitter.com/CHHSAgency">캘리포니아 보건 사회 복지부 트위터</a></p>
-
-
-
-<p><a href="https://www.facebook.com/CAgovernor/">캘리포니아 주지사 사무실 페이스북</a><br></p>
+<p><br></p>
 </div>
     </div>
   </div>
