--- a/tl/guide-immigrant-californians/index.html
+++ b/tl/guide-immigrant-californians/index.html
@@ -163,7 +163,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Tulong para sa mga immigrant</h1>
           
-            <p class="small-text">Last updated&nbsp;Oktubre 30, 2020 sa 8:39 AM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 19, 2020 sa 1:43 PM</p>
           
         </div>
       </div>
@@ -184,7 +184,7 @@
 
 
 
-<p>Kung wala kang dokumentasyon o insurance, puwede mo pa ring makuha ang kinakailangang pagpapasuri o pagpapagamot para sa COVID-19 nang libre. Ang pangangalaga ng Medi-Cal para sa nauugnay na pagsusuri o paggamot para sa COVID-19 ay HINDI nabibilang sa panuntunan sa public charge.</p>
+<p>Kung wala kang dokumentasyon o insurance, puwede mo pa ring makuha ang kinakailangang pagpapasuri o pagpapagamot para sa COVID-19 nang libre. Ang pangangalaga ng Medi-Cal para sa nauugnay na pagsusuri o paggamot para sa COVID-19 ay <strong>hindi</strong> nabibilang sa panuntunan sa public charge.</p>
 
 
 
