--- a/tl/healthcare/index.html
+++ b/tl/healthcare/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pangangalagang pangkalusugan at saklaw</h1>
           
-            <p class="small-text">Last updated&nbsp;Nobyembre 14, 2020 sa 6:32 AM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 19, 2020 sa 11:59 AM</p>
           
         </div>
       </div>
@@ -446,8 +446,9 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>Nasasaklaw ang mga sumusunod na serbisyo:</p>
-<ul><li>Pangongolekta ng specimen, diagnostic, at antibody na pagsusuri</li><li>Mga pagbisita na nauugnay sa pagsusuri, kasama ang mga sumusunod na setting: <ul><li>Opisina </li><li>Agarang pangangalaga </li><li>Emergency room, o </li><li>Telehealth</li></ul></li><li>Paggamot, kasama ang:<ul><li>Pagbisita sa opisina</li><li><a href="/tl/telehealth/#top">Telehealth</a></li><li>Emergency room </li><li>Inpatient </li><li>Outpatient/obserbasyon </li><li>Pasilidad sa sanay na pangangalaga </li><li>Pangmatagalang acute na pangangalaga (long-term acute care, LTAC) </li><li>Acute inpatient na rehabilitasyon </li><li>Pangangalaga sa bahay </li><li>Matibay na Medikal na Kagamitan (Durable Medical Equipment, DME), tulad ng oxygen at ventilator</li><li>Emergency ambulance na transportasyon </li><li>Hindi emergent na paglipat sa pasyente sa pamamagitan ng ambulansya</li><li>Mga gamot na aprubado ng Administrasyon sa Pagkain at Gamot (Food ang Drug Administration, FDA) na ibinibigay bilang bahagi ng inpatient na pananatili</li><li>Mga administration fee para sa mga bakunang inawtorisahan ng FDA, kapag available </li></ul></li></ul>
-<p>Ang mga serbisyong hindi saklaw ng tradisyonal na Medicare ay hindi sasaklawin. Bukod pa riyan, hindi kasama ang mga sumusunod na serbisyo:</p>
+<ul><li>Pangongolekta ng specimen, diagnostic, at antibody na pagsusuri</li><li>Mga pagbisita na nauugnay sa pagsusuri, kasama ang mga sumusunod na setting: <ul><li>Opisina </li><li>Agarang pangangalaga </li><li>Emergency room, o </li><li>Telehealth</li></ul></li><li>Paggamot, kasama ang:<ul><li>Pagbisita sa opisina</li><li><a href="/tl/telehealth/#top">Telehealth</a></li><li>Emergency room </li><li>Inpatient </li><li>Outpatient/obserbasyon </li><li>Pasilidad sa sanay na pangangalaga </li><li>Pangmatagalang acute na pangangalaga (long-term acute care, LTAC) </li><li>Acute inpatient na rehabilitasyon </li><li>Pangangalaga sa bahay </li><li>Matibay na Medikal na Kagamitan (Durable Medical Equipment, DME), tulad ng oxygen at ventilator</li><li>Emergency ambulance na transportasyon </li><li>Hindi emergent na paglipat sa pasyente sa pamamagitan ng ambulansya</li><li>Mga paggamot na nilisensyahan, pinahintulutan, o naaprubahan ng FDA</li><li>Mga bakunang nilisensyahan o pinahintulutan ng FDA, kasama ang mga bayarin sa pagbibigay</li></ul></li></ul>
+<p>Ang mga serbisyong hindi sinasaklaw ng tradisyonal na Medicare ay hindi sasaklawin ng mga reimbursement ng claim para sa COVID-19 sa mga provider ng pangangalagang pangkalusugan at pasilidad para sa pagsusuri, paggamot, at pagbibigay ng bakuna para sa mga walang insurance.</p>
+<p>Bukod pa riyan, hindi kasama ang mga sumusunod na serbisyo:</p>
 <ul><li>Ang anumang paggagamot nang walang pangunahing diagnosis ng COVID-19, maliban sa pagbubuntis</li><li>Mga serbisyo ng hospisyo</li><li>Mga inireresetang gamot sa outpatient</li></ul>
 <p>Para sa higit pang detalye, tingnan ang <a href="https://www.hrsa.gov/CovidUninsuredClaim">website ng HRSA</a> at ang kanilang <a href="https://www.hrsa.gov/coviduninsuredclaim/frequently-asked-questions">mga madalas itanong</a>.</p>
 
@@ -455,6 +456,10 @@
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
@@ -792,15 +797,11 @@
 
 
 
-<p><a href="http://www.insurance.ca.gov/01-consumers/140-catastrophes/Coronavirus.cfm">Impormasyon sa COVID-19 ng Departamento sa Insurance ng California (California Department of Insurance)</a></p>
+<ul><li><a href="http://www.insurance.ca.gov/01-consumers/140-catastrophes/Coronavirus.cfm">Impormasyon sa COVID-19 ng Departamento sa Insurance ng California (California Department of Insurance)</a></li><li><a href="https://twitter.com/CHHSAgency">Twitter ng Mga Serbisyo sa Pangkatauhan at Kalusugan ng California (California Health and Human Services)</a></li></ul>
 
 
 
-<p><a href="https://twitter.com/CHHSAgency">Twitter ng Mga Serbisyo sa Pangkatauhan at Kalusugan ng California (California Health and Human Services)</a></p>
-
-
-
-<p><a href="https://www.facebook.com/CAgovernor/">Facebook ng Opisina ng Gobernador ng California</a><br></p>
+<p><br></p>
 </div>
     </div>
   </div>
