--- a/vi/healthcare/index.html
+++ b/vi/healthcare/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Chăm sóc sức khỏe và bảo hiểm</h1>
           
-            <p class="small-text">Last updated&nbsp;14 tháng 11, 2020 lúc 6:32</p>
+            <p class="small-text">Last updated&nbsp;19 tháng 11, 2020 lúc 11:59</p>
           
         </div>
       </div>
@@ -446,8 +446,9 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>Các dịch vụ sau đây được bao trả:</p>
-<ul><li>Lấy mẫu bệnh phẩm, xét nghiệm chẩn đoán và xét nghiệm kháng thể</li><li>Các buổi thăm khám liên quan đến xét nghiệm, bao gồm trong các thiết lập sau: <ul><li>Văn phòng </li><li>Chăm sóc khẩn cấp </li><li>Phòng cấp cứu, hoặc </li><li>Chăm sóc sức khỏe từ xa</li></ul></li><li>Điều trị, bao gồm:<ul><li>Thăm khám tại văn phòng</li><li><a href="/vi/telehealth/#top">Chăm sóc sức khỏe từ xa</a></li><li>Phòng cấp cứu </li><li>Nội trú </li><li>Ngoại trú/quan sát </li><li>Cơ sở điều dưỡng chuyên môn </li><li>Chăm sóc cấp tính dài hạn (Long-term acute care, LTAC) </li><li>Phục hồi chức năng nội trú cấp tính </li><li>Sức khỏe tại nhà </li><li>Thiết Bị Y Tế Lâu Bền (Durable Medical Equipment, DME), như oxy và máy thở</li><li>Vận chuyển bằng xe cấp cứu </li><li>Chuyên chở bệnh nhân không cần cấp cứu bằng xe cứu thương</li><li>Thuốc được Cơ Quan Quản Lý Thực Phẩm và Dược Phẩm (Food and Drug Administration, FDA) phê duyệt được cho dùng như một phần của quá trình điều trị nội trú</li><li>Phí tiêm chủng đối với vắc-xin được FDA phê duyệt, nếu có </li></ul></li></ul>
-<p>Các dịch vụ mà chương trình Medicare truyền thống không bao trả sẽ không được bao trả. Ngoài ra, các dịch vụ sau đây cũng không được bao trả:</p>
+<ul><li>Lấy mẫu bệnh phẩm, xét nghiệm chẩn đoán và xét nghiệm kháng thể</li><li>Các buổi thăm khám liên quan đến xét nghiệm, bao gồm trong các thiết lập sau: <ul><li>Văn phòng </li><li>Chăm sóc khẩn cấp </li><li>Phòng cấp cứu, hoặc </li><li>Chăm sóc sức khỏe từ xa</li></ul></li><li>Điều trị, bao gồm:<ul><li>Thăm khám tại văn phòng</li><li><a href="/vi/telehealth/#top">Chăm sóc sức khỏe từ xa</a></li><li>Phòng cấp cứu </li><li>Nội trú </li><li>Ngoại trú/quan sát </li><li>Cơ sở điều dưỡng chuyên môn </li><li>Chăm sóc cấp tính dài hạn (Long-term acute care, LTAC) </li><li>Phục hồi chức năng nội trú cấp tính </li><li>Sức khỏe tại nhà </li><li>Thiết Bị Y Tế Lâu Bền (Durable Medical Equipment, DME), như oxy và máy thở</li><li>Vận chuyển bằng xe cấp cứu </li><li>Vận chuyển bệnh nhân không cần cấp cứu bằng xe cứu thương</li><li>Thuốc điều trị được Cơ Quan Quản Lý Thực Phẩm và Dược Phẩm (Food and Drug Administration, FDA) cấp phép, cho phép hoặc phê duyệt</li><li>Vắc-xin được FDA cấp phép hoặc cho phép, bao gồm cả phí tiêm</li></ul></li></ul>
+<p>Các dịch vụ không được chương trình Medicare thông thường bao trả sẽ không được bao trả bởi yêu cầu thanh toán cho đại dịch COVID-19 để bồi hoàn cho các nhà cung cấp dịch vụ và cơ sở chăm sóc sức khỏe đối với dịch vụ xét nghiệm, điều trị và tiêm phòng vắc-xin cho người không có bảo hiểm.</p>
+<p>Ngoài ra, các dịch vụ sau đây cũng không được bao trả:</p>
 <ul><li>Bất kỳ dịch vụ điều trị nào không có chẩn đoán chính mắc COVID-19, trừ trường hợp mang thai</li><li>Dịch vụ chăm sóc cuối đời</li><li>Thuốc kê toa dành cho bệnh nhân ngoại trú</li></ul>
 <p>Để biết thêm thông tin chi tiết, hãy xem <a href="https://www.hrsa.gov/CovidUninsuredClaim">trang web của Cơ Quan Quản Trị Dịch Vụ và Nguồn Lực Y Tế (Health Resources and Services Administration, HRSA)</a> và <a href="https://www.hrsa.gov/coviduninsuredclaim/frequently-asked-questions">các câu hỏi thường gặp</a> của họ.</p>
 
@@ -455,6 +456,10 @@
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
@@ -792,15 +797,11 @@
 
 
 
-<p><a href="http://www.insurance.ca.gov/01-consumers/140-catastrophes/Coronavirus.cfm">Thông Tin về Đại Dịch COVID-19 của Sở Bảo Hiểm California</a></p>
+<ul><li><a href="http://www.insurance.ca.gov/01-consumers/140-catastrophes/Coronavirus.cfm">Thông Tin về Đại Dịch COVID-19 của Sở Bảo Hiểm California</a></li><li><a href="https://twitter.com/CHHSAgency">Sở Y Tế và Dịch Vụ Nhân Sinh California trên Twitter</a></li></ul>
 
 
 
-<p><a href="https://twitter.com/CHHSAgency">Sở Dịch Vụ Y Tế và Nhân Sinh California trên Twitter</a></p>
-
-
-
-<p><a href="https://www.facebook.com/CAgovernor/">Văn Phòng Thống Đốc Bang California trên Facebook</a><br></p>
+<p><br></p>
 </div>
     </div>
   </div>
