--- a/zh-hant/guide-immigrant-californians/index.html
+++ b/zh-hant/guide-immigrant-californians/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>為移民提供的援助</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年10月30日, 上午8:39</p>
+            <p class="small-text">Last updated&nbsp;2020年11月19日, 下午1:43</p>
           
         </div>
       </div>
@@ -182,7 +182,7 @@
 
 
 
-<p>即使您沒有身份證件或沒有保險，您仍然可以免費接受必要的COVID-19檢測和治療。僅針對COVID-19相關檢測或治療的Medi-Cal護理不計入公共負擔規定。</p>
+<p>即使您沒有身份證件或沒有保險，您仍然可以免費接受必要的COVID-19檢測和治療。僅針對COVID-19相關檢測或治療的Medi-Cal護理<strong>不</strong>計入公共負擔規定。</p>
 
 
 
