--- a/zh-hant/healthcare/index.html
+++ b/zh-hant/healthcare/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>醫療保健與保險</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月14日, 上午6:32</p>
+            <p class="small-text">Last updated&nbsp;2020年11月19日, 上午11:59</p>
           
         </div>
       </div>
@@ -446,8 +446,9 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>支付項目包括如下：</p>
-<ul><li>樣本採集、診斷檢測和抗體檢測</li><li>與檢測有關的看診，包括在以下場合進行的看診： <ul><li>診所 </li><li>緊急護理中心 </li><li>急診室，或 </li><li>遠距健康照護</li></ul></li><li>治療，包括：<ul><li>診所就診</li><li><a href="/zh-hant/telehealth/#top">遠距健康照護</a></li><li>急診室 </li><li>住院 </li><li>門診/觀察 </li><li>專業護理機構 </li><li>長期急症護理 (Long-Term Acute Care, LTAC) </li><li>急症住院康復治療 </li><li>家庭保健 </li><li>耐用醫療設備 (Durable Medical Equipment, DME)，例如氧氣機和呼吸機</li><li>緊急救護車運輸 </li><li>透過救護車轉送非急診患者</li><li>於住院期間施用經美國食品藥品監督管理局 (Food and Drug Administration, FDA) 核准的藥物</li><li>經FDA核准的疫苗的施打費用（在疫苗可用的情況下） </li></ul></li></ul>
-<p>傳統Medicare不承保的服務亦不受保。此外，下列服務不在承保範圍之內：</p>
+<ul><li>樣本採集、診斷檢測和抗體檢測</li><li>與檢測有關的看診，包括在以下場合進行的看診： <ul><li>診所 </li><li>緊急護理中心 </li><li>急診室，或 </li><li>遠距健康照護</li></ul></li><li>治療，包括：<ul><li>診所就診</li><li><a href="/zh-hant/telehealth/#top">遠距健康照護</a></li><li>急診室 </li><li>住院 </li><li>門診/觀察 </li><li>專業護理機構 </li><li>長期急症護理 (Long-Term Acute Care, LTAC) </li><li>急症住院康復治療 </li><li>家庭保健 </li><li>耐用醫療設備 (Durable Medical Equipment, DME)，例如氧氣機和呼吸機</li><li>緊急救護車運輸 </li><li>透過救護車轉送非急診患者</li><li>FDA許可、授權或核准的治療</li><li>FDA許可或授權的疫苗，包括施打費用</li></ul></li></ul>
+<p>傳統Medicare不承保的服務，不會透過COVID-19報銷申請獲得承保，該報銷申請是向為無保險人士提供檢測、治療及疫苗接種的醫療保健提供者和機構提供的。</p>
+<p>此外，下列服務不在承保範圍之內：</p>
 <ul><li>在沒有進行COVID-19初步診斷的情況下而接受的任何治療（妊娠除外）</li><li>安寧服務</li><li>門診處方藥物</li></ul>
 <p>欲知更多詳情，請瀏覽<a href="https://www.hrsa.gov/CovidUninsuredClaim">衛生資源和服務管理局 (Health Resources and Services Administration, HRSA) 網站</a>及其<a href="https://www.hrsa.gov/coviduninsuredclaim/frequently-asked-questions">常見問題與解答</a>。</p>
 
@@ -455,6 +456,10 @@
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
@@ -792,15 +797,11 @@
 
 
 
-<p><a href="http://www.insurance.ca.gov/01-consumers/140-catastrophes/Coronavirus.cfm">加州保險局 (Department of Insurance) COVID-19資訊</a></p>
+<ul><li><a href="http://www.insurance.ca.gov/01-consumers/140-catastrophes/Coronavirus.cfm">加州保險局 (Department of Insurance) COVID-19資訊</a></li><li><a href="https://twitter.com/CHHSAgency">加州衛生與公共服務部 (Health and Human Services) 的Twitter帳號</a></li></ul>
 
 
 
-<p><a href="https://twitter.com/CHHSAgency">加州衛生與公共服務部 (Health and Human Services) 的Twitter帳號</a></p>
-
-
-
-<p><a href="https://www.facebook.com/CAgovernor/">加州州長辦公室的Facebook帳號</a><br></p>
+<p><br></p>
 </div>
     </div>
   </div>
