--- a/es/healthcare/index.html
+++ b/es/healthcare/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Atención médica y cobertura</h1>
           
-            <p class="small-text">Last updated&nbsp;14 de noviembre de 2020 a las 6:32 a. m.</p>
+            <p class="small-text">Last updated&nbsp;19 de noviembre de 2020 a las 11:59 a. m.</p>
           
         </div>
       </div>
@@ -446,8 +446,9 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>Los siguientes servicios están cubiertos:</p>
-<ul><li>recolección de muestras, diagnóstico y pruebas de anticuerpos</li><li>visitas relacionadas con la prueba, incluso en los siguientes sitios: <ul><li>consultorio;</li><li>atención de urgencia;</li><li>sala de emergencia, o</li><li>telesalud.</li></ul></li><li>tratamientos, que incluyen:<ul><li>visitas al consultorio;</li><li><a href="/es/telehealth/#top">telesalud;</a></li><li>sala de emergencia; </li><li>atención como paciente hospitalizado; </li><li>atención como paciente ambulatorio y en observación; </li><li>centros de enfermería especializada; </li><li>atención aguda a largo plazo (Long-Term Acute Care, LTAC); </li><li>rehabilitación hospitalaria aguda; </li><li>salud en el hogar; </li><li>equipo médico duradero (Durable Medical Equipment, DME) como oxígeno y ventilador;</li><li>transporte de emergencia en ambulancia; </li><li>transferencias no urgentes de pacientes en ambulancia;</li><li>medicamentos aprobados por la Administración de Alimentos y Medicamentos (Food and Drug Administration, FDA) como parte de una hospitalización, y</li><li>tarifas de administración de la vacuna autorizada por la FDA, cuando esté disponible. </li></ul></li></ul>
-<p>Los servicios no cubiertos por Medicare tradicional no estarán cubiertos. Además, se excluyen los siguientes servicios:</p>
+<ul><li>recolección de muestras, diagnóstico y pruebas de anticuerpos</li><li>visitas relacionadas con la prueba, incluso en los siguientes sitios: <ul><li>consultorio;</li><li>atención de urgencia;</li><li>sala de emergencia, o</li><li>telesalud.</li></ul></li><li>tratamientos, que incluyen:<ul><li>visitas al consultorio;</li><li><a href="/es/telehealth/#top">telesalud;</a></li><li>sala de emergencia; </li><li>atención como paciente hospitalizado; </li><li>atención como paciente ambulatorio y en observación; </li><li>centros de enfermería especializada; </li><li>atención aguda a largo plazo (Long-Term Acute Care, LTAC); </li><li>rehabilitación hospitalaria aguda; </li><li>salud en el hogar; </li><li>equipo médico duradero (Durable Medical Equipment, DME) como oxígeno y ventilador;</li><li>transporte de emergencia en ambulancia; </li><li>transferencias no urgentes de pacientes en ambulancia;</li><li>tratamientos con licencia, autorización o aprobación de la Administración de Alimentos y Medicamentos (Food and Drug Administration, FDA), o</li><li>vacunas autorizadas o con licencia de la FDA, incluidas las tarifas de administración.</li></ul></li></ul>
+<p>Los servicios no cubiertos por Medicare tradicional no estarán cubiertos por el reembolso de reclamos de la COVID-19 a proveedores e instalaciones de atención médica por pruebas, tratamiento y administración de vacunas para los no asegurados.</p>
+<p>Además, se excluyen los siguientes servicios:</p>
 <ul><li>cualquier tratamiento sin un diagnóstico primario de COVID-19, excepto para el embarazo</li><li>servicios de cuidados paliativos</li><li>medicamentos recetados para pacientes ambulatorios</li></ul>
 <p>Para obtener más detalles, consulte <a href="https://www.hrsa.gov/CovidUninsuredClaim">el sitio web de la Administración de Recursos y Servicios de Salud (Health Resources & Services Administration, HRSA)</a> y sus <a href="https://www.hrsa.gov/coviduninsuredclaim/frequently-asked-questions">preguntas frecuentes</a>.</p>
 
@@ -455,6 +456,10 @@
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
@@ -792,15 +797,11 @@
 
 
 
-<p><a href="http://www.insurance.ca.gov/01-consumers/140-catastrophes/Coronavirus.cfm">Información de la COVID-19 del Departamento de Seguros de California</a></p>
+<ul><li><a href="http://www.insurance.ca.gov/01-consumers/140-catastrophes/Coronavirus.cfm">Información de la COVID-19 del Departamento de Seguros de California</a></li><li><a href="https://twitter.com/CHHSAgency">Salud y Servicios Humanos de California en Twitter</a></li></ul>
 
 
 
-<p><a href="https://twitter.com/CHHSAgency">Salud y Servicios Humanos de California en Twitter</a></p>
-
-
-
-<p><a href="https://www.facebook.com/CAgovernor/">Oficina del gobernador de California en Facebook</a><br></p>
+<p><br></p>
 </div>
     </div>
   </div>
