--- a/ko/guide-immigrant-californians/index.html
+++ b/ko/guide-immigrant-californians/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>이민자를 위한 지원</h1>
           
-            <p class="small-text">Last updated&nbsp;2020년 10월 30일 오전 8:39</p>
+            <p class="small-text">Last updated&nbsp;2020년 11월 19일 오후 1:43</p>
           
         </div>
       </div>
@@ -182,7 +182,7 @@
 
 
 
-<p>비합법 신분이거나 보험이 없는 경우에도 필요한 COVID-19 검사 및 치료를 무료로 받을 수 있습니다. COVID-19와 관련된 검사나 치료를 위한 Medi-Cal 진료는 생활 보호 대상자 규정에 해당하지 않습니다.</p>
+<p>비합법 신분이거나 보험이 없는 경우에도 필요한 COVID-19 검사 및 치료를 무료로 받을 수 있습니다. COVID-19와 관련된 검사나 치료를 위한 Medi-Cal 진료는 생활 보호 대상자 규정에 해당하지 <strong>않습니다</strong>.</p>
 
 
 
