--- a/vi/guide-immigrant-californians/index.html
+++ b/vi/guide-immigrant-californians/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Hỗ trợ người nhập cư</h1>
           
-            <p class="small-text">Last updated&nbsp;30 tháng 10, 2020 lúc 8:39</p>
+            <p class="small-text">Last updated&nbsp;19 tháng 11, 2020 lúc 13:43</p>
           
         </div>
       </div>
@@ -182,7 +182,7 @@
 
 
 
-<p>Nếu quý vị không có giấy tờ hoặc không có bảo hiểm, quý vị vẫn có thể được hưởng dịch vụ xét nghiệm và điều trị COVID-19 cần thiết miễn phí. Dịch vụ chăm sóc của Medi-Cal đối với các xét nghiệm hoặc điều trị liên quan đến COVID-19 KHÔNG được tính theo quy tắc tính phí công.</p>
+<p>Nếu quý vị không có giấy tờ hoặc không có bảo hiểm, quý vị vẫn có thể được hưởng dịch vụ xét nghiệm và điều trị COVID-19 cần thiết hoàn toàn miễn phí. Dịch vụ chăm sóc của Medi-Cal đối với các dịch vụ xét nghiệm hoặc điều trị chỉ liên quan đến COVID-19 <strong>không</strong> được tính theo quy tắc tính phí công.</p>
 
 
 
