--- a/zh-hans/guide-immigrant-californians/index.html
+++ b/zh-hans/guide-immigrant-californians/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>为移民提供的援助</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年10月30日, 上午8:39</p>
+            <p class="small-text">Last updated&nbsp;2020年11月19日, 下午1:43</p>
           
         </div>
       </div>
@@ -182,7 +182,7 @@
 
 
 
-<p>即使您没有身份证件或没有保险，您仍然可以免费获取必要的COVID-19检测和治疗。仅针对COVID-19相关检测或治疗的Medi-Cal护理不计入公共负担规定。</p>
+<p>即使您没有身份证件或没有保险，您仍然可以免费获取必要的COVID-19检测和治疗。仅针对COVID-19相关检测或治疗的Medi-Cal护理<strong>不</strong>计入公共负担规定。</p>
 
 
 
