--- a/zh-hans/healthcare/index.html
+++ b/zh-hans/healthcare/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>医疗保健与保险</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月14日, 上午6:32</p>
+            <p class="small-text">Last updated&nbsp;2020年11月19日, 上午11:59</p>
           
         </div>
       </div>
@@ -446,8 +446,9 @@
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
 <p>以下服务在承保范围内：</p>
-<ul><li>样本采集、诊断检测和抗体检测</li><li>与检测相关的看诊，包括在下列环境中进行的看诊： <ul><li>诊所 </li><li>紧急护理 </li><li>急诊室，或 </li><li>远程健康护理</li></ul></li><li>治疗，包括：<ul><li>诊所就诊</li><li><a href="/zh-hans/telehealth/#top">远程健康护理</a></li><li>急诊室 </li><li>住院 </li><li>门诊/观察 </li><li>专业护理机构 </li><li>长期急症护理 (Long-term acute care, LTAC) </li><li>急症住院患者康复 </li><li>家庭保健 </li><li>耐用医疗器材 (Durable Medical Equipment, DME)，如氧气机和呼吸机</li><li>急诊救护交通运输 </li><li>通过救护车转移非急诊患者</li><li>在住院期间施用的经FDA认证的药物</li><li>经FDA核准的疫苗的施打费用（在疫苗可用的情况下） </li></ul></li></ul>
-<p>传统Medicare不承保的服务亦不受保。此外，下列服务不在承保范围之内：</p>
+<ul><li>样本采集、诊断检测和抗体检测</li><li>与检测相关的看诊，包括在下列环境中进行的看诊： <ul><li>诊所 </li><li>紧急护理 </li><li>急诊室，或 </li><li>远程健康护理</li></ul></li><li>治疗，包括：<ul><li>诊所就诊</li><li><a href="/zh-hans/telehealth/#top">远程健康护理</a></li><li>急诊室 </li><li>住院 </li><li>门诊/观察 </li><li>专业护理机构 </li><li>长期急症护理 (Long-term acute care, LTAC) </li><li>急症住院患者康复 </li><li>家庭保健 </li><li>耐用医疗器材 (Durable Medical Equipment, DME)，如氧气机和呼吸机</li><li>急诊救护交通运输 </li><li>通过救护车转移非急诊患者</li><li>FDA许可、授权或核准的治疗</li><li>FDA许可或授权的疫苗，包括施打费用</li></ul></li></ul>
+<p>传统Medicare不承保的服务，不会通过COVID-19报销申请获得承保，该报销申请是向为无保险人士提供检测、治疗及疫苗接种的医疗保健提供者和机构提供的。</p>
+<p>此外，下列服务不在承保范围之内：</p>
 <ul><li>在没有进行COVID-19初步诊断的情况下而接受的任何治疗（妊娠除外）</li><li>安宁服务</li><li>门诊处方药物</li></ul>
 <p>如需更多详情，请浏览<a href="https://www.hrsa.gov/CovidUninsuredClaim">卫生资源与服务管理局 (Health Resources and Services Administration, HRSA) 网站</a>及其<a href="https://www.hrsa.gov/coviduninsuredclaim/frequently-asked-questions">常见问题与解答</a>。</p>
 
@@ -455,6 +456,10 @@
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
 
 
 
@@ -792,15 +797,11 @@
 
 
 
-<p><a href="http://www.insurance.ca.gov/01-consumers/140-catastrophes/Coronavirus.cfm">加州保险局 (Department of Insurance) COVID-19信息</a></p>
+<ul><li><a href="http://www.insurance.ca.gov/01-consumers/140-catastrophes/Coronavirus.cfm">加州保险局 (Department of Insurance) COVID-19信息</a></li><li><a href="https://twitter.com/CHHSAgency">加州卫生与公共服务部 (Health and Human Services) 的Twitter账号</a></li></ul>
 
 
 
-<p><a href="https://twitter.com/CHHSAgency">加州卫生与公共服务部 (Health and Human Services) 的Twitter账号</a></p>
-
-
-
-<p><a href="https://www.facebook.com/CAgovernor/">加州州长办公室的Facebook账号</a><br></p>
+<p><br></p>
 </div>
     </div>
   </div>
