--- a/zh-hant/latest-news/index.html
+++ b/zh-hant/latest-news/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有關COVID-19的最新消息</h1>
           
-            <p class="small-text">Last updated&nbsp;November 20, 2020 at 6:18 AM</p>
+            <p class="small-text">Last updated&nbsp;November 20, 2020 at 9:07 AM</p>
           
         </div>
       </div>
@@ -184,6 +184,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--43211 -->November 18, 2020</small></p>
           <div class="card-text" lang="en-US">SACRAMENTO – Governor Gavin Newsom today issued the following statement regarding the death of Riverside County Probation Department Deputy Probation Officer Julio Beltran: “Jennifer and I were heartbroken to learn of th...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-305.aspx" lang="en-US" hreflang="en-US">State Officials Announce Latest COVID-19 Facts</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--dba0654e18e3f6ba21438ac980d3a432 -->November 18, 2020</small></p>
+          <div class="card-text" lang="en-US">The California Department of Public Health (CDPH) today announced the most recent statistics on COVID-19.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
