add translated chart

--- a/pages/wordpress-posts/equity.html
+++ b/pages/wordpress-posts/equity.html
@@ -314,7 +314,19 @@ addtositemap: false
 
 
 
-<cagov-chart-d3-bar></cagov-chart-d3-bar>
+<cagov-chart-d3-bar class="d-none">
+  <ul>
+    <li class="sectionTitle">Factors that increase risk of infection and severe illness</li>
+    <li class="sectionDescription">Californians in crowded housing or transportation, and with less access to paid leave and other worker protections have a higher risk of infection of COVID-19. Social determinants of health, such as food insecurity, lack of health insurance, and housing instability can increase the risk of poor outcomes. These social determinants of health are often the result of structural racism.</li>
+    <li class="chartTitleIncome">Case rate by median annual household income bracket</li>
+    <li class="chartTitleHousing">Case rate by crowding housing</li>
+    <li class="chartTitleHealthcare">Case rate by access to healthcare</li>
+    <li class="chartButtonIncome">Income</li>
+    <li class="chartButtonHousing">Crowded housing</li>
+    <li class="chartButtonHealthcare">Access to health insurance</li>
+    <li class="footnote">Note: Data comes from the American Community Survey and is statewide. It does not reflect individual counties. Data shown is cumulative for the last 7 days and updated daily</li>
+  </ul>
+</cagov-chart-d3-bar>
 
 
 
