deploy: 9446cfc77d5ea2d3f06416a7c21d4846a1a44a6a

--- a/ko/latest-news/index.html
+++ b/ko/latest-news/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>COVID-19에 대한 최신 뉴스</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2020년 11월 20일 오후 2:28</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2020년 11월 20일 오후 3:28</p>
           
         </div>
       </div>
@@ -184,6 +184,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--43276 -->November 20, 2020</small></p>
           <div class="card-text" lang="en-US">Amid surge in COVID-19 cases, the report by Co-Chairs Ann O’Leary and Tom Steyer reaffirms the state’s health-first approach as the foundation for a safe and sustainable reopening  Report highlights innovative proposals ...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-307.aspx" lang="en-US" hreflang="en-US">State Officials Announce Latest COVID-19 Facts</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--0c357db0cca3da1171e1466b9223185a -->November 19, 2020</small></p>
+          <div class="card-text" lang="en-US">The California Department of Public Health (CDPH) today announced the most recent statistics on COVID-19.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
