--- a/masks-and-ppe/index.html
+++ b/masks-and-ppe/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Masks</h1>
           
-            <p class="small-text">Last updated&nbsp;November 20, 2020 at 4:45 PM</p>
+            <p class="small-text">Last updated&nbsp;November 20, 2020 at 5:10 PM</p>
           
         </div>
       </div>
@@ -202,7 +202,7 @@
 
 
 
-<ul><li>In a car alone or solely with members of their own household.</li><li>Working in an office or in a room alone.</li><li>Actively eating or drinking. You should maintain a distance of at least six feet from those not in your household.</li><li>Outdoors and maintaining at least 6 feet of social distance from others not in their household. You must have a face covering with you at all times and must put it on if you are within 6 feet of others who are not in your household.</li><li>Getting a service to the nose or face for which temporary removal of the mask is necessary.</li><li>Your job  requires you to wear respiratory protection.</li><li>You are specifically exempted from wearing face coverings by other <a href="https://covid19.ca.gov/industry-guidance/">Industry guidance</a>.</li></ul>
+<ul><li>In a car alone or solely with members of their own household.</li><li>Working in an office or in a room alone.</li><li>Actively eating or drinking. You should maintain a distance of at least six feet from those not in your household.</li><li>Outdoors and maintaining at least 6 feet of social distance from others not in their household. You must have a face covering with you at all times and must put it on if you are within 6 feet of others who are not in your household.</li><li>Getting a service to the nose or face for which temporary removal of the mask is necessary.</li><li>Your job  requires you to wear respiratory protection.</li><li>You are specifically exempted from wearing face coverings by an  <a href="https://covid19.ca.gov/industry-guidance/">Industry specific guidance</a>.</li></ul>
 
 
 
