--- a/data-and-tools/index.html
+++ b/data-and-tools/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Data and tools</h1>
           
-            <p class="small-text">Last updated&nbsp;November 21, 2020 at 10:48 AM</p>
+            <p class="small-text">Last updated&nbsp;November 21, 2020 at 12:30 PM</p>
           
         </div>
       </div>
