deploy: fefe01e3c218c9152481756ab96fa52d03c72b67

--- a/symptoms-and-risks/index.html
+++ b/symptoms-and-risks/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Symptoms and risks</h1>
           
-            <p class="small-text">Last updated&nbsp;November 16, 2020 at 6:38 AM</p>
+            <p class="small-text">Last updated&nbsp;November 21, 2020 at 9:10 PM</p>
           
         </div>
       </div>
@@ -174,7 +174,7 @@
 
 
 
-<h2>Coronavirus symptoms</h2>
+<h2 id="Coronavirus-symptoms">Coronavirus symptoms</h2>
 
 
 
@@ -202,7 +202,7 @@
 
 
 
-<h2>What increases your risk of infection</h2>
+<h2 id="What-increases-your-risk-of-infection">What increases your risk of infection</h2>
 
 
 
@@ -246,7 +246,7 @@
 
 
 
-<h2>Extra precautions for high-risk groups</h2>
+<h2 id="Extra-precautions-for-high-risk-groups">Extra precautions for high-risk groups</h2>
 
 
 
@@ -262,7 +262,7 @@
 
 
 
-<h2>Stay safe by preparing</h2>
+<h2 id="Stay-safe-by-preparing">Stay safe by preparing</h2>
 
 
 
@@ -274,7 +274,7 @@
 
 
 
-<h3>Questions and answers</h3>
+<h2 id="Questions-and-answers">Questions and answers</h2>
 
 
 
@@ -507,7 +507,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>We don’t yet know. The duration of immunity to coronavirus infection is not yet understood. Patients infected with similar viruses are unlikely to be re-infected in the months after they recover. But we don’t yet know if  similar immune protection happens in patients with COVID-19.</p>
+<p>We don’t yet know. The duration of immunity to coronavirus infection is not yet understood. Patients infected with similar viruses are unlikely to be re-infected in the months after they recover. But we don’t yet know if&nbsp; similar immune protection happens in patients with COVID-19.</p>
 
       </div>
     </div>
