deploy: a00bfe712c35fb81a43741cccaec2805778ce374

--- a/zh-hant/data-and-tools/index.html
+++ b/zh-hant/data-and-tools/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>數據和工具</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月21日, 下午9:13</p>
+            <p class="small-text">Last updated&nbsp;2020年11月22日, 上午10:48</p>
           
         </div>
       </div>
