--- a/tl/latest-news/index.html
+++ b/tl/latest-news/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pinakabagong balita sa COVID-19</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Nobyembre 22, 2020 sa 10:48 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Nobyembre 22, 2020 sa 11:41 AM</p>
           
         </div>
       </div>
@@ -170,6 +170,14 @@
     <div class="row">
       <div class="col-lg-10 mx-auto">
         <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-309.aspx" lang="en-US" hreflang="en-US">State Officials Announce Latest COVID-19 Facts</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--d29e9f0b910c5c86985ec197c294bf7d -->November 21, 2020</small></p>
+          <div class="card-text" lang="en-US">The California Department of Public Health (CDPH) today announced the most recent statistics on COVID-19.</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
           <h2 class="card-title lead" lang="en-US">
             <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-308.aspx" lang="en-US" hreflang="en-US">State Officials Announce Latest COVID-19 Facts</a>
