--- a/pages/wordpress-posts/equity.html
+++ b/pages/wordpress-posts/equity.html
@@ -244,10 +244,28 @@ addtositemap: false
 <div class="container">
   <div class="row">
     <div class="col">
-      <cagov-chart-re-pop></cagov-chart-re-pop>
+      <cagov-chart-re-pop>
+        <ul>
+          <li data-label="chartTitleCases">Cases relative to percentage of population in placeholderForDynamicLocation</li>
+          <li data-label="chartTitleDeaths">Deaths relative to percentage of population in placeholderForDynamicLocation</li>
+          <li data-label="chartTitleTesting">Testing relative to percentage of population in placeholderForDynamicLocation</li>
+          <li data-label="chartDescriptionCases">Compare the percentage of each race and ethnicity’s share of statewide cases to their percentage of placeholderForDynamicLocation’s population.</li>
+          <li data-label="chartDescriptionDeaths">Compare the percentage of each race and ethnicity’s share of statewide deaths to their percentage of placeholderForDynamicLocation’s population.</li>
+          <li data-label="chartDescriptionTesting">Compare the percentage of each race and ethnicity’s share of statewide tests to their percentage of placeholderForDynamicLocation’s population.</li>
+        </ul>
+      </cagov-chart-re-pop>
     </div>
     <div class="col">
-      <cagov-chart-re-100k></cagov-chart-re-100k>
+      <cagov-chart-re-100k>
+        <ul>
+          <li data-label="chartTitleCases">Cases rate per 100K by race and ethnicity group in placeholderForDynamicLocation</li>
+          <li data-label="chartTitleDeaths">Deaths rate per 100K by race and ethnicity group in placeholderForDynamicLocation</li>
+          <li data-label="chartTitleTesting">Testing rate per 100K by race and ethnicity group in placeholderForDynamicLocation</li>
+          <li data-label="chartDescriptionCases">Compare cases adjusted by population size across each race and ethnicity.</li>
+          <li data-label="chartDescriptionDeaths">Compare deaths adjusted by population size across each race and ethnicity.</li>
+          <li data-label="chartDescriptionTesting">Compare tests adjusted by population size across each race and ethnicity.</li>
+        </ul>
+      </cagov-chart-re-100k>
     </div>
   </div>
 </div>
