--- a/pages/wordpress-posts/equity.html
+++ b/pages/wordpress-posts/equity.html
@@ -246,24 +246,26 @@ addtositemap: false
     <div class="col">
       <cagov-chart-re-pop>
         <ul>
-          <li data-label="chartTitleCases">Cases relative to percentage of population in placeholderForDynamicLocation</li>
-          <li data-label="chartTitleDeaths">Deaths relative to percentage of population in placeholderForDynamicLocation</li>
-          <li data-label="chartTitleTesting">Testing relative to percentage of population in placeholderForDynamicLocation</li>
-          <li data-label="chartDescriptionCases">Compare the percentage of each race and ethnicity’s share of statewide cases to their percentage of placeholderForDynamicLocation’s population.</li>
-          <li data-label="chartDescriptionDeaths">Compare the percentage of each race and ethnicity’s share of statewide deaths to their percentage of placeholderForDynamicLocation’s population.</li>
-          <li data-label="chartDescriptionTesting">Compare the percentage of each race and ethnicity’s share of statewide tests to their percentage of placeholderForDynamicLocation’s population.</li>
+          <li data-label="chartTitle--cases">Cases relative to percentage of population in placeholderForDynamicLocation</li>
+          <li data-label="chartTitl--deaths">Deaths relative to percentage of population in placeholderForDynamicLocation</li>
+          <li data-label="chartTitle--testing">Testing relative to percentage of population in placeholderForDynamicLocation</li>
+          <li data-label="chartDescription--cases">Compare the percentage of each race and ethnicity’s share of statewide cases to their percentage of placeholderForDynamicLocation’s population.</li>
+          <li data-label="chartDescription--deaths">Compare the percentage of each race and ethnicity’s share of statewide deaths to their percentage of placeholderForDynamicLocation’s population.</li>
+          <li data-label="chartDescription--testing">Compare the percentage of each race and ethnicity’s share of statewide tests to their percentage of placeholderForDynamicLocation’s population.</li>
+          <li data-label="chartLineDiff">change since previous month</li>
         </ul>
       </cagov-chart-re-pop>
     </div>
     <div class="col">
       <cagov-chart-re-100k>
         <ul>
-          <li data-label="chartTitleCases">Cases rate per 100K by race and ethnicity group in placeholderForDynamicLocation</li>
-          <li data-label="chartTitleDeaths">Deaths rate per 100K by race and ethnicity group in placeholderForDynamicLocation</li>
-          <li data-label="chartTitleTesting">Testing rate per 100K by race and ethnicity group in placeholderForDynamicLocation</li>
-          <li data-label="chartDescriptionCases">Compare cases adjusted by population size across each race and ethnicity.</li>
-          <li data-label="chartDescriptionDeaths">Compare deaths adjusted by population size across each race and ethnicity.</li>
-          <li data-label="chartDescriptionTesting">Compare tests adjusted by population size across each race and ethnicity.</li>
+          <li data-label="chartTitle--cases">Cases rate per 100K by race and ethnicity group in placeholderForDynamicLocation</li>
+          <li data-label="chartTitle--deaths">Deaths rate per 100K by race and ethnicity group in placeholderForDynamicLocation</li>
+          <li data-label="chartTitle--testing">Testing rate per 100K by race and ethnicity group in placeholderForDynamicLocation</li>
+          <li data-label="chartDescription--cases">Compare cases adjusted by population size across each race and ethnicity.</li>
+          <li data-label="chartDescription--deaths">Compare deaths adjusted by population size across each race and ethnicity.</li>
+          <li data-label="chartDescription--testing">Compare tests adjusted by population size across each race and ethnicity.</li>
+          <li data-label="chartLineDiff">change since previous month</li>
         </ul>
       </cagov-chart-re-100k>
     </div>
