deploy: fd82be619d739c5c92e3bb61bc1fbaf10bf77fd1

--- a/get-tested/index.html
+++ b/get-tested/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Testing</h1>
           
-            <p class="small-text">Last updated&nbsp;November 14, 2020 at 6:31 AM</p>
+            <p class="small-text">Last updated&nbsp;November 23, 2020 at 9:26 AM</p>
           
         </div>
       </div>
@@ -381,6 +381,54 @@
 
 
 <h2 id="questions-and-answers">Questions and answers</h2>
+
+
+
+<cwds-accordion>
+  <div class="card">
+    <button class="card-header accordion-alpha" type="button" aria-expanded="false">
+      <div class="accordion-title">
+<h4>Is there a COVID-19 test I can take at home?</h4>
+      </div>
+    </button>
+    <div class="card-container" aria-hidden="true" style="height: 0px;">
+      <div class="card-body">
+<p>Yes. The U.S. Food and Drug Administration (FDA) issued an <a href="https://www.fda.gov/media/143810/download">Emergency Use Authorization (EUA)</a> for an at-home COVID-19 diagnostic self-test. The authorization is for home use with self-collected nasal swab samples in individuals aged 14 and older. The test is currently authorized for prescription use only.&nbsp;</p>
+<p>The test works by swirling the self-collected sample swab in a vial that is then placed in the test unit. In 30 minutes or less, the results can be read directly from the test unit’s light-up display.&nbsp;</p>
+<p>Individuals with positive results should:</p>
+<ul><li>Self-isolate</li><li>Seek additional care from their health care provider</li></ul>
+<p>Individuals who test negative and experience COVID-like symptoms should follow up with their health care provider. It is possible to get a negative test result and still be infected with  coronavirus.</p>
+<p><br>For more information, see the <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-first-covid-19-test-self-testing-home"><strong>FDA news release</strong></a><strong>.</strong></p>
+
+      </div>
+    </div>
+  </div>
+</cwds-accordion>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
