--- a/src/js/equity-dash/charts/missingness/snippet.html
+++ b/src/js/equity-dash/charts/missingness/snippet.html
@@ -1,39 +1,30 @@
 <cagov-chart-equity-missingness class="d-none">
   <ul>
-    <!--Translatable values for charts. -->
     <div>
       <ul>
-        <li data-label="title">Reporting by race and ethnicity in California</l
-i>
-        <li data-label="tab-label">Reporting by <span data-replace="metric-filt
-er"></span> in <span data-replace="location"></span></li>
-        <li data-label="special-note">Data reporting keeps improving. Since Jan
-uary, the reporting on age and gender is up to completeness. The same can be don
-e for this data.</li>
-        <li data-label="footnote">Note: Data shown is cumulative for the last 3
-0 days and updated daily.</li>
+        <li data-label="title">Reporting by race and ethnicity in California</li>
+        <li data-label="special-note">Data reporting keeps improving. Since January, the reporting on age and gender is up to completeness. The same can be done for this data.</li>
+        <li data-label="footnote">Note: Data shown is cumulative for the last 30 days and updated daily.</li>
+        <li data-label="tab-label">Reporting by <span data-replace="metric-filter"></span> in <span data-replace="location"></span></li>
         <li data-label="data-missing">Data missing</li>
         <li data-label="data-reported">Data reported</li>
         <li data-label="reported">reported</li>
         <li data-label="missing">missing</li>
         <li data-label="empty-tooltip">an empty tooltip</li>
-        <li data-label="percent-change-previous-month">change in cases since pr
-evious month</li>
+        <li data-label="percent-change-previous-month">change in cases since previous month</li>
         <li data-label="chart-tooltip-complete">
           <div>
-          In <span data-replace="location">California</span>, <span data-replac
-e="data-type">race and ethnicity</span> data for
+          In <span data-replace="location">California</span>, <span data-replace="data-type">race and ethnicity</span> data for
           <span data-replace="metric">tests</span> is
           <span class="highlight-data">
-            <span data-replace="highlight-data">  </span>
+            <span data-replace="highlight-data"></span>
           </span>
           complete.
           </div>
         </li>
         <li data-label="chart-tooltip-missing">
           <div>
-          In <span data-replace="location">California</span>, <span data-replac
-e="data-type">race and ethnicity</span> data for
+          In <span data-replace="location">California</span>, <span data-replace="data-type">race and ethnicity</span> data for
           <span data-replace="metric">tests</span> is
           <span class="highlight-data">
             <span data-replace="highlight-data"></span>
