deploy: a962844a01a6d3abd8a5acd0c2ae771105e49697

--- a/treatment-for-covid-19/index.html
+++ b/treatment-for-covid-19/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Treatment</h1>
           
-            <p class="small-text">Last updated&nbsp;November 14, 2020 at 6:29 AM</p>
+            <p class="small-text">Last updated&nbsp;November 23, 2020 at 11:42 AM</p>
           
         </div>
       </div>
@@ -186,11 +186,7 @@
 
 
 
-<ul><li>Infection prevention&nbsp;</li><li>Control measures</li><li>Supportive care, including:<ul><li>&nbsp;Supplemental oxygen</li><li>&nbsp;Mechanical ventilatory support&nbsp;</li></ul></li></ul>
-
-
-
-<p>The U.S. Food and Drug Administration (FDA) has approved one drug, remdesivir (Veklury), for the treatment of COVID-19 in certain situations.</p>
+<ul><li>Infection prevention </li><li>Control measures</li><li>Supportive care, including:<ul><li> Supplemental oxygen</li><li> Mechanical ventilatory support </li></ul></li></ul>
 
 
 
@@ -370,20 +366,30 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Yes. The FDA has issued an EUA for the monoclonal antibody drug bamlanivimab, limited to treatment of:</p>
+<p>Yes. The FDA has issued two EUAs for monoclonal antibody drugs:</p>
+<ul><li>Bamlanivimab</li><li>Casirivimab and imdevimab, administered together</li></ul>
+<p>Authorizations are for:</p>
 <ul><li>Non-hospitalized patients with mild or moderate COVID-19.</li><li>Adult and pediatric patients 12 years of age and older weighing at least 88 pounds.&nbsp;</li><li>Patients at high risk for progressing to severe COVID-19 or hospitalization. This includes those who are 65 years of age or older, or who have certain chronic medical conditions.</li></ul>
-<p>Bamlanivimab is administered as a single dose intravenously by health care providers.</p>
-<p>Bamlanivimab is not authorized for use in COVID-19 patients who:</p>
-<ul><li>Are hospitalized</li><li>Require oxygen therapy</li><li>Require an increase in baseline oxygen flow due to underlying non-COVID-19-related conditions</li></ul>
-<p>Patients treated with bamlanivimab should continue to:</p>
+<p>The drugs are administered as a single dose intravenously by health care providers.</p>
+<p>These drugs are not authorized for use in COVID-19 patients requiring:</p>
+<ul><li>Hospitalization</li><li>Oxygen therapy</li><li>An increase in baseline oxygen flow due to underlying non-COVID-19-related conditions</li></ul>
+<p>Patients treated with these drugs should continue to:</p>
 <ul><li>Self-isolate</li><li>Wear a mask&nbsp;</li><li>Socially distance&nbsp;</li><li>Avoid sharing personal items&nbsp;</li><li>Clean and disinfect “high touch” surfaces&nbsp;</li><li>Frequently wash their hands</li></ul>
 <p>For more information, see</p>
-<ul><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">Monoclonal Antibody for Treatment of COVID-19</a></li><li>FDA: <a href="https://www.fda.gov/media/143605/download">Frequently Asked Questions on the Emergency Use Authorization for Bamlanivimab</a></li></ul>
+<ul><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">Monoclonal Antibody Bamlanivimab for Treatment of COVID-19</a></li><li>FDA: <a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">Monoclonal Antibodies Casirivimab and Imdevimab for Treatment of COVID-19</a></li><li>FDA: <a href="https://www.fda.gov/media/143605/download">Frequently Asked Questions on the Emergency Use Authorization for Bamlanivimab</a> </li><li>FDA: <a href="https://www.fda.gov/media/143894/download">Frequently Asked Questions on the Emergency Use Authorization of Casirivimab + Imdevimab</a></li></ul>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
+
+
+
+
 
 
 
