--- a/es/data-and-tools/index.html
+++ b/es/data-and-tools/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Datos y herramientas</h1>
           
-            <p class="small-text">Last updated&nbsp;23 de noviembre de 2020 a las 11:46 a. m.</p>
+            <p class="small-text">Last updated&nbsp;23 de noviembre de 2020 a las 2:19 p. m.</p>
           
         </div>
       </div>
