--- a/safer-economy/index.html
+++ b/safer-economy/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint for a Safer Economy</h1>
           
-            <p class="small-text">Last updated&nbsp;November 23, 2020 at 11:46 AM</p>
+            <p class="small-text">Last updated&nbsp;November 23, 2020 at 2:19 PM</p>
           
         </div>
       </div>
