--- a/tl/safer-economy/index.html
+++ b/tl/safer-economy/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint para sa Mas Ligtas na Ekonomiya</h1>
           
-            <p class="small-text">Last updated&nbsp;Nobyembre 23, 2020 sa 11:46 AM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 23, 2020 sa 2:19 PM</p>
           
         </div>
       </div>
