--- a/ar/safer-economy/index.html
+++ b/ar/safer-economy/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>برنامج تخطيطي لاقتصاد أكثر أمانا</h1>
           
-            <p class="small-text">Last updated&nbsp;5:26 م الساعة 23 نوفمبر 2020</p>
+            <p class="small-text">Last updated&nbsp;4:41 ص الساعة 24 نوفمبر 2020</p>
           
         </div>
       </div>
