--- a/contact-tracing/index.html
+++ b/contact-tracing/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Contact tracing</h1>
           
-            <p class="small-text">Last updated&nbsp;November 18, 2020 at 1:37 PM</p>
+            <p class="small-text">Last updated&nbsp;November 24, 2020 at 4:38 AM</p>
           
         </div>
       </div>
@@ -412,7 +412,7 @@
 
 
 
-<p>If you’re an immigrant, you can find help in the <a href="https://files.covid19.ca.gov/img/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">Guide for Immigrant Californians (PDF)</a>.</p>
+<p>If you’re an immigrant, you can find help in the <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">Guide for Immigrant Californians (PDF)</a>.</p>
 
 
 
