--- a/latest-news/index.html
+++ b/latest-news/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Latest news on COVID-19</h1>
           
-            <p class="small-text">Last updated&nbsp;November 23, 2020 at 5:26 PM</p>
+            <p class="small-text">Last updated&nbsp;November 24, 2020 at 4:42 AM</p>
           
         </div>
       </div>
