--- a/tl/latest-news/index.html
+++ b/tl/latest-news/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pinakabagong balita sa COVID-19</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Nobyembre 23, 2020 sa 5:26 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Nobyembre 24, 2020 sa 4:42 AM</p>
           
         </div>
       </div>
