--- a/ar/data-and-tools/index.html
+++ b/ar/data-and-tools/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>البيانات والأدوات</h1>
           
-            <p class="small-text">Last updated&nbsp;11:51 ص الساعة 24 نوفمبر 2020</p>
+            <p class="small-text">Last updated&nbsp;12:28 م الساعة 24 نوفمبر 2020</p>
           
         </div>
       </div>
